# AegisTrace

./: AEGISTRACE_fullstack_guide.txt  QUICK_START.md  QUICK_TEST.md  README.md  执行计划  测试步骤.md  目录结构
.github/workflows/: ci.yml  release.yml
apps/aegis-tauri/src-tauri/: Cargo.toml
apps/aegis-tauri/src-tauri/src/: main.rs
apps/aegis-tauri/ui/: index.html
config/: README.md  config.json  config.txt
docs/: CLIENT_TESTING.md  TESTING_GUIDE.md
scripts/: diagnose.sh  test_basic.sh  test_client.sh  test_evidence_bundle.sh
