[package]
name = "aegis-tauri"
version = "0.1.0"
description = "AEGISTRACE GUI shell"
authors = ["AEGISTRACE"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
dirs = "5"
aegis-core = { path = "../../../crates/aegis-core" }

[features]
custom-protocol = ["tauri/custom-protocol"]
